# flask-task-api

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml
mysql/: my.cnf
mysql/sqls/: initialize.sql
src/: app.py  config.py  database.py  pyproject.toml  run.py
src/api/: models.py  views.py
