[tool.poetry]
name = "task-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.26.1"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy-Utils = "^0.37.8"
Flask-Migrate = "^3.1.0"
PyMySQL = "^1.0.2"
cryptography = "^3.4.8"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
